remove max width at 1150px breakpoint to avoid left alignment

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -21,6 +21,9 @@ $hero-bp-vert: 1150px;
 
 .home-hero__headline {
   max-width: 400px;
+  @media (max-width: 1150px) {
+    max-width: none;
+  }
   h1 {
     .small {
       @media (min-width: $hero-bp-1) {
